# mflash-studio-rs

./: .gitignore  Cargo.toml  PKGBUILD  README.md  ReadME.md  config.toml  mflash-studio-rs.desktop
assets/schemas/: audio_settings.toml  flashcard_settings.toml  raw_json_settings.toml  sfx_settings.toml  tts_settings.toml
src/: archive.rs  audio.rs  config.rs  input.rs  main.rs  media.rs  models.rs  plugin.rs  sfx.rs
src/audio/: bcp47.rs
src/dialogs/: settings.rs
src/menubar/: edit.rs  file.rs  help.rs  mod.rs  settings.rs  tools.rs  view.rs
src/models/: mod.rs
src/plugins/: mod.rs
src/views/: flashcard_view.rs  list.rs  mod.rs  raw_json.rs
src/views/settings/: audio_settings.rs
src/workspaces/: assets.rs  browse.rs  deck.rs  flashcards.rs  list.rs  mod.rs  raw_json.rs  schema_editor.rs  visual_editor.rs
src/workspaces/settings/: audio_settings.rs  flashcard_settings.rs  mod.rs  raw_json_settings.rs  sfx_settings.rs  tts_settings.rs
src/workspaces/visual_editor/: audio_actions.rs  basic_editor.rs  card_kind.rs  cloze.rs  drag_drop.rs  examples.rs  image_occlusion.rs  json_sync.rs  language_picker.rs  listening.rs  media_panel.rs  media_prompt.rs  mod.rs  quick_options.rs  render.rs  top_bar.rs
