[package]
name = "mflash-studio-rs"
version = "0.1.4"
edition = "2021"
authors = ["MoribundMurdoch"]
description = "A high-performance, local-first studio for managing .mflash decks."

[dependencies]
eframe = "0.27"
egui_extras = { version = "0.27", features = ["image"] } 
image = { version = "0.24", features = ["png", "jpeg", "webp"] }
zip = { version = "1.1", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tts = "0.26"
toml = "0.8"
rfd = "0.17.2"
arboard = "3.6.1"
rodio = "0.22.2"
